2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added setpagedevice* rc file variables

	* noweb/f_print.nw: Added the code to implement the
	setpagedevice-* rc keywords.

	* noweb/*.nw: Cleaned up -Wall warnings
	
2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_attrib.nw: Added a comment to a line which was using
	uref= which is now deprecated (replaced by refdes=)
	
2002-07-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_text_basic.nw: Fixed the crash when you try to display
	the finnish/swedish characters
	
2002-07-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_complex_basic.nw: Changed o_complex_return_pin_object()
	to look for things using the pinnumber= attribute (instead of
	pinseq)

	* include/defines.h: Renamed a few #defines to slowly migrate away
	from the word "label"
	
2002-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in/Makefile.am: Upgraded to automake 1.6.2

2002-07-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_complex_basic.nw: Removed an extra / when reading in
	embedded components

	* noweb/o_attrib.nw: Removed a log message which is not an error:
	( Did not find slot= attribute )

	* noweb/o_complex_basic.nw: Changed o_complex_return_pin_object to 
	search using the pinseq attribute

2002-06-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_attrib.nw: Added a o_attrib_print_reverse to help
	in debugging.

	* noweb/o_attrib.nw: Added a bit more output to o_attrib_print
	to help in debugging.

2002-06-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/u_basic.nw: Changed u_basic_breakup_string to take a
	character as a delimiter.
	
2002-06-21 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Moved all the gsymcheck structures to a
	gsymcheck specific file

	* noweb/o_attrib.nw: Completely removed two obsolete o_attrib_search_* 
	functions

2002-06-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/s_basic.nw: Added patch by Bryce Denney to remove \r in 