@@ -20,7 +20,7 @@ libgedadoc_TEXINFOS =	a_basic.texi f_basic.texi f_image.texi f_print.texi   \
 			s_cue.texi s_hierarchy.texi s_log.texi s_menu.texi    \
 			s_page.texi s_papersizes.texi s_scratch.texi          \
 			s_slib.texi s_stretch.texi s_tile.texi s_undo.texi    \
-			u_basic.texi
+			s_project.texi u_basic.texi
 TEXINFO_TEX =		./texinfo.tex
 
 
