@@ -1,3 +1,14 @@
+2002-09-16 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* noweb/s_project.nw: Added new file.  Basically the s_project.c
+	that gnetlist used is now in libgeda.  This will make writing
+	utils which read in sch/sym files much easier.
+
+	* src/Makefile.am: Bumped shared library version number to 17.
+
+	* include/funcs.h: Added variable_set_func and quit_func to allow
+	user programs to use the new s_project_* code.
+
 2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* include/struct.h: Added setpagedevice* rc file variables
